--- a/src/views/index.handlebars
+++ b/src/views/index.handlebars
@@ -1,3 +1,4 @@
+<h1>{{title}}</h1>
 <div class="box">
     <div class="view-cart"><a id="button-cart" class="button">Ver Carrito</a></div>
     <h1>Productos</h1>
